Updated service and added unit tests